tests/fixtures/LatestTests/ObjectTests/errors/circular_type_definition.fg
/; EXPECT_ERROR: VariableNotFound
type A = {
    b: B
}

type B = {
    a: A
}

var a: A = {
    b: {
        a: {
            b: {
                a: {
                }
            }
        }
    }
}

